# theridion-fe

./: CHANGELOG.md  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: desktop-release.yml  security.yml
apps/sidecar-fe/: pyproject.toml  sidecar.spec
apps/sidecar-fe/scripts/: build-bundle.sh
apps/sidecar-fe/tests/: test_environments.py  test_silk.py  test_silk_transpile.py
apps/sidecar-fe/theridion_sidecar/: main.py  seed.py  silk_locators.py  silk_transpile.py
apps/sidecar-fe/theridion_sidecar/api/: owasp_scanner.py  silk.py  silk_frameworks.py
apps/sidecar-fe/theridion_sidecar/spin/: database.py  runner.py
apps/studio-fe/: README.md  package.json  pnpm-lock.yaml
apps/studio-fe/src/: App.tsx  index.css
apps/studio-fe/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio-fe/src/components/: ActivityBar.tsx  HubOverviewPanel.tsx  LangSwitcher.tsx  MobilePanel.tsx  NewTestDialog.tsx  SettingsModal.tsx  SilkPanel.tsx
apps/studio-fe/src/lib/i18n/: context.tsx  index.ts  messages.cs.ts  messages.en.ts  types.ts
apps/studio-fe/src/lib/sidecar/: index.ts  mobile.ts  silk.ts
apps/studio-fe/tests/unit/: hub-overview-panel.test.tsx  mobile-panel.test.tsx  new-test-dialog.test.tsx
docs/: improvements-plan.md  improvements-roadmap.md  signing.md
memory/: memory.md  soul.md
wiki/: 01-DOMAIN.md  02-ARCHITECTURE.md  03-DECISIONS.md  04-RUNBOOK.md
