[project]
name = "theridion-sidecar-fe"
version = "0.1.0"
description = "Theridion FE Python sidecar — Playwright runner orchestration"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Tomáš Mertin", email = "tomas.mertin@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx[http2]>=0.28",
    "pydantic>=2.10",
    "cryptography>=48.0.0",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.28",
    "jsonpath-ng>=1.8.0",
    "lxml>=6.1.0",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyinstaller>=6.20.0",
    "respx>=0.23.1",
    "pip-audit>=2.10.0",
]

[project.scripts]
theridion-sidecar-fe = "theridion_sidecar.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theridion_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
